typo thx zorceta and oran

--- a/cache_mixins.jade
+++ b/cache_mixins.jade
@@ -4,13 +4,13 @@ mixin cache_header()
     p
         if has('posts')
             a(href='/archive') 归档
-            |  / 
+            |  /
         if has('images')
             a(href='/album') 相册
-            |  / 
+            |  /
         if has('about.md') or has('about.txt')
             a(href='/about') 关于
-            |  / 
+            |  /
         a(href="/feed") 订阅
 
 mixin cache_footer()
@@ -18,7 +18,7 @@ mixin cache_footer()
         | Designed by
         a(href='http://oyiadin.com/') Chen Xiaoyuan
         if site.configs.author
-            |  / Wrote by
+            |  / Written by
             a(href='/')= site.configs.author
         |  / Powered by
         a(href='http://farbox.com/') FarBox
