一点细节、样式的微调

--- a/cache_mixins.jade
+++ b/cache_mixins.jade
@@ -12,7 +12,7 @@ mixin cache_header()
             a(href='/album') 相册
             |  /
         if has('about.md') or has('about.txt')
-            a(href='/post/about') 关于
+            a(href='/about.md') 关于
             |  /
         a(href="/feed") 订阅
 
