--- a/elements.css
+++ b/elements.css
@@ -1,7 +1,7 @@
 body {
     margin: 0;
     padding: 0;
-    font-size: 1.5em;
+    font-size: 1.46em;
     color: #3f4444;
 }
 a {
@@ -23,7 +23,7 @@ b, strong, em {
 blockquote {
     margin: 2em 0;
     padding: 2em 2.5em;;
-    background-color: #DDD;
+    background-color: #DFDFDF;
 }
 button, input[type=submit] {
     box-sizing: border-box;
