--- a/style.css
+++ b/style.css
@@ -1,9 +1,3 @@
-@media (max-width: 700px) {
-    body {
-        font-size: 1.2em;
-    }
-}
-
 #header, article, #footer {
     width: 90%;
     max-width: 720px;
@@ -24,11 +18,11 @@ article {
 article > * {
     line-height: 1.6em;
 }
-#posts-list > li {
+ul#posts-list > li {
     padding-top: 0.3em;
     padding-bottom: 0.3em;
 }
-#posts-list > li > a {
+ul#posts-list > li > a {
     border: none;
 }
 #post-informations {
@@ -61,4 +55,13 @@ article > * {
 }
 #footer a {
     border: none;
+}
+
+@media (max-width: 820px) {
+    body {
+        font-size: 1.2em;
+    }
+    li {
+        padding-left: 40px;
+    }
 }
