前面两次更新所遗漏的地方

--- a/404.jade
+++ b/404.jade
@@ -17,3 +17,7 @@ block content
         | 您可以在下面搜索一下，也可以
         a(href="javascript:history.back();") 点此返回上一页
         | 。
+
+    form(action='/', method="GET")
+        input(name="s", placeholder="输入内容回车开始搜索")
+        input(type="submit", value="确认")
