--- a/style.css
+++ b/style.css
@@ -1,12 +1,14 @@
 #header, article, #footer {
     width: 90%;
-    max-width: 720px;
-    margin: 2em auto;
+    max-width: 780px;
+    margin: 2.5em auto;
     text-align: center;
+}
+#header {
+    margin: 5em auto 4em;
 }
 #header p {
     cursor: default;
-    color: #333;
 }
 #header a {
     border: none;
@@ -18,6 +20,9 @@ article {
 article > * {
     line-height: 1.6em;
 }
+#site-title {
+    font-size: 1.5em;
+}
 ul#posts-list > li {
     padding-top: 0.3em;
     padding-bottom: 0.3em;
@@ -25,11 +30,19 @@ ul#posts-list > li {
 ul#posts-list > li > a {
     border: none;
 }
+h1#post-title {
+    text-align: center;
+    margin-bottom: 0;
+    font-size: 1.5em;
+}
+hr#post-begin-hr:before {
+    content: "*";
+}
 #post-informations {
     color: #333;
     font-style: italic;
     font-size: 0.7em;
-    margin-top: 0.3em;
+    margin-top: 1em;
 }
 .date {
     margin-right: 3px;
@@ -41,7 +54,8 @@ ul#posts-list > li > a {
 #eof {
     text-align: center;
     font-style: italic;
-    line-height: 3em;
+    line-height: 5em;
+    color: gray;
 }
 #footer {
     margin-top: 1.5em;
@@ -50,7 +64,7 @@ ul#posts-list > li > a {
 #footer p {
     font-size: 0.7em;
     color: gray;
-    line-height: 1em;
+    line-height: 1.5em;
     text-shadow: 0 0 15px #BBB;
 }
 #footer a {
@@ -59,9 +73,11 @@ ul#posts-list > li > a {
 
 @media (max-width: 820px) {
     body {
-        font-size: 1.2em;
+        font-size: 1.15em;
     }
-    li {
-        padding-left: 40px;
+}
+@media (max-width: 640px) {
+    body {
+        font-size: 1.05em;
     }
 }
