一揽子的细节修改
1. 字体选择仿宋，背景前景修改
2. 字体大小，行高行距修改
3. Disqus、duoshuo 评论系统（原生评论系统尚在编写）
4. 页面自适应相关的修改

--- a/archive.jade
+++ b/archive.jade
@@ -1,7 +1,7 @@
 extends layout
 
 block content
-    entries = posts.group('date:year')
+    entries = posts.group('-date:year')
     for posts_in_year in entries
         h2(style="text-align:center")= posts_in_year[0]
 
