--- a/post.jade
+++ b/post.jade
@@ -1,5 +1,8 @@
 extends layout
 
+block title
+    {{ post.title }}
+
 block content
     h1#post-title= post.title
     hr#post-begin-hr
@@ -7,5 +10,68 @@ block content
     div#post-body= post.content
 
     p#post-informations 本文发布于 {{ post.date.format("%Y-%m-%d") }}，最后修改于 {{ post.raw_date.format("%Y-%m-%d") }}，被阅读了约 {{ post.visits }} 次。
+
+    if site.configs.duoshuo
+        div(class="ds-thread", data-thread-key=post.raw_path, data-title=post.title)
+
+        script(type="text/javascript").
+            var duoshuoQuery = {short_name:"{{ site.configs.duoshuo }}"};
+            (function() {
+                var ds = document.createElement('script');
+                ds.type = 'text/javascript';ds.async = true;
+                ds.src = (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//static.duoshuo.com/embed.js';
+                ds.charset = 'UTF-8';
+                (document.getElementsByTagName('head')[0] 
+                 || document.getElementsByTagName('body')[0]).appendChild(ds);
+            })();
+
+    elif site.configs.disqus
+        div#disqus_thread
+        script(type="text/javascript").
+            /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
+            var disqus_shortname = '{{ site.configs.disqus }}';
+            var disqus_identifier = '{{ post.raw_path }}';
+            var disqus_title = '{{ post.title }}';
+            /* * * DON'T EDIT BELOW THIS LINE * * */
+            (function() {
+                var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+                dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+                (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+            })();
+        noscript Please enable JavaScript to view the
+            a(href="http://disqus.com/?ref_noscript") comments powered by Disqus.
+        a.dsq-brlink(href="http://disqus.com") comments powered by
+            span.logo-disqus  Disqus
+
+    else
+        div#comments
+            for comment in get_comments(post)
+                div.comment
+                    span.comment_avatar
+                        img(src="http://cn.gravatar.com/avatar/{{ comment.email_md5 }}?s=80")
+                    div.comment_main
+                        div.comment_info.s.g
+                            span.comment_author
+                                a.n(href="{{ comment.site or '#' }}")
+                                    if comment.author
+                                        strong= comment.author
+                                    else
+                                        | anonymous
+                            span.comment_date
+                                {{ comment.date.format("%Y-%m-%d %H:%M:%S") }}
+                        div.comment_content= comment.content
+
+        if comment_allowed
+            //- 表单的 POST 应该发到文章本页。
+            form.comment_new(method="post", action="#comments")
+                textarea(name="content", rows="10")= comment_content
+
+                if error
+                    p.g.comment_error= error
+
+                input.comment_new_input(type="text", name="author", value="Name")
+                input.comment_new_input(type="text", name="email", value="Email")
+                input.comment_new_input(type="text", name="site", value="Site")
+                input.comment_new_send(type="submit", value="OK")
 
     p#eof(title="End Of File") - EOF -
